# XInstructBLIP-TPU

./: .gitignore  npuengine.py  requirements.txt
lavis/configs/models/blip2/: blip2_instruct_vicuna7b.yaml  blip2_xinstruct_vicuna7b.yaml
lavis/models/: __init__.py  base_model.py  beats_encoder.py  eva_vit.py  mad
lavis/models/blip2_models/: blip2_t5_instruct.py  blip2_vicuna_instruct.py  blip2_vicuna_instruct_tpu.py  blip2_vicuna_xinstruct.py  modeling_llama.py
lavis/models/blip2_models/instructblip_cpp/: llama.cpp
lavis/models/blip2_models/instuctblip_cpp/: CMakeLists.txt  llama.cpp
projects/instructblip/: run_demo.py  test_main.py
projects/xinstructblip/demo/: run_demo.py
projects/xinstructblip/demo/configs/: vicuna7b_v2.yaml
salesforce_lavis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trace/: npuengine.py  setup_cachedir.sh
trace/InstructBLIP/: compile_llm.sh  compile_others.sh  trace_others.py  trace_vicuna.py
